--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,55 @@ img {
     object-fit: cover;
     width: 100%;
 }
+
+.section-header {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.section-header span {
+    padding: 0.8rem;
+    border-radius: 1rem;
+    font-size: 1.5rem;
+}
+
+/* --------------------------------------*/
+.pageHeader {
+    margin-top: 2rem;
+    height: 20rem;
+    overflow: hidden;
+    border-bottom: 2px solid;
+}
+
+.pageHeader-container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: grid;
+    place-items: center;
+}
+
+.pageHeader-container-bg {
+    position: absolute;
+    width: 100%;
+}
+
+.pageHeader-container-bg img {
+    opacity: 0.9;
+}
+
+.pageHeader-content {
+    position: relative;
+    width: 44%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.pageHeader-content h2 {
+    margin-bottom: 1rem;
+}
+
+.pageHeader-content p {
+    color: white;
+}
